package crr.googlemaps;

/*Generated by MPS */


public class Review {
  public int Id;
  public String Comment;

  public Review() {
  }

  public String toString() {
    String res = "";
    return res += "" + Comment + ";\n";
  }
}
